examples/test/testpolicy8200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8200
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key48: value48
      key9: value44
      key31: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value4
      podSelector:
        matchLabels:
          key27: value13
          key43: value4
          key9: value37
